--- a/frontend-react/src/components/footer/Footer.css
+++ b/frontend-react/src/components/footer/Footer.css
@@ -86,6 +86,7 @@
     .dropbar-container{
         display: flex;
         flex-direction: column;
+        gap: 4rem;
     }
 
     .dropbar-container nav{
